1.crud
1.user
2.attendance
3.encode
4.security